--- a/src/main/resources/templates/auditManager/index.html
+++ b/src/main/resources/templates/auditManager/index.html
@@ -83,8 +83,8 @@
 							<div id="subPages" class="collapse ">
 								<ul class="nav">
 									<li><a href="javascript:void(0);" onclick="addTab('待办事项','todolist')" >待办事项</a></li>
-									<li><a href="javascript:void(0);" onclick="addTab('计划项目进度','approved')">计划项目进度</a></li>
-									<li><a href="javascript:void(0);" onclick="addTab('计划项目进度','message')">人员任务总览</a></li>
+									<li><a href="javascript:void(0);" onclick="addTab('计划项目进度','proProcess')">计划项目进度</a></li>
+									<li><a href="javascript:void(0);" onclick="addTab('计划项目进度','personTask')">人员任务总览</a></li>
 								</ul>
 							</div>
 						</li>
@@ -134,10 +134,12 @@
 								</ul>
 							</div>
 						</li>
-						<li><a href="notifications" onclick="addTab('审计机构管理','auditormanage')"><i class="lnr lnr-alarm"></i> <span>审计机构管理</span></a></li>
-						<li><a href="notifications" onclick="addTab('流程定义','processdefine')"><i class="lnr lnr-alarm"></i> <span>流程定义</span></a></li>
-						<li><a href="notifications" onclick="addTab('审计知识库管理','auditlib')"><i class="lnr lnr-alarm"></i> <span>审计知识库管理</span></a></li>
-						<li><a href="notifications" onclick="addTab('操作日志','oplog')"><i class="lnr lnr-alarm"></i> <span>操作日志</span></a></li>
+						<li><a href="javascript:void(0);" onclick="addTab('审计机构管理','auditormanage')"><i class="lnr lnr-alarm"></i> <span>审计机构管理</span></a></li>
+						<li><a href="javascript:void(0);" onclick="addTab('流程定义','processdefine')"><i class="lnr lnr-alarm"></i> <span>流程定义</span></a></li>
+						<li><a href="javascript:void(0);" onclick="addTab('审计知识库管理','auditlib')"><i class="lnr lnr-alarm"></i> <span>审计知识库管理</span></a></li>
+						<li><a href="javascript:void(0);" onclick="addTab('操作日志','oplog')"><i class="lnr lnr-alarm"></i> <span>操作日志</span></a></li>
+						<li><a href="javascript:void(0);" onclick="addTab('审计计划管理','auditplanpro')"><i class="lnr lnr-alarm"></i> <span>审计计划管理</span></a></li>
+						<li><a href="javascript:void(0);" onclick="addTab('审计项目','auditpro')"><i class="lnr lnr-alarm"></i> <span>审计项目</span></a></li>
 					</ul>
 				</nav>
 			</div>
@@ -148,7 +150,7 @@
 	</div>
 		<footer>
 			<div class="container-fluid">
-				<p class="copyright">Copyright &copy; 2017.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+				<p class="copyright">Copyright &copy; 2017.Company name All rights reserved.</p>
 			</div>
 		</footer>
 
