--- a/src/main/resources/templates/auditManager/roleManage.html
+++ b/src/main/resources/templates/auditManager/roleManage.html
@@ -105,10 +105,10 @@
 
         //修改角色信息
         function upRoleForm() {
-            var id=$("#id").val();
-            alert(id);
+            var row=$("#tab1").datagrid('getSelected');
+            alert(row.id)
             $("#upRoleForm").form({
-                url:'upRole?id='+id,
+                url:'upRole?id='+row.id,
                 onSubmit:function () {
                 },
                 success:function (data) {
