--- a/src/main/resources/templates/auditors/index.html
+++ b/src/main/resources/templates/auditors/index.html
@@ -94,12 +94,60 @@
 							</ul>
 						</div>
 					</li>
-					<li><a href="javascript:void(0)" onclick="addTab('审计计划管理','riskmatrix')"><i class="lnr lnr-alarm"></i> <span>审计计划管理</span></a></li>
-					<li><a href="javascript:void(0)" onclick="addTab('被审单位管理','auditedmanage')"><i class="lnr lnr-text-format"></i> <span>被审单位管理</span></a></li>
-					<li><a href="javascript:void(0)" onclick="addTab('审计项目','auditpro')"><i class="lnr lnr-linearicons"></i> <span>审计项目</span></a></li>
-					<li><a href="javascript:void(0)" onclick="addTab('流程定义','processdefine')"><i class="lnr lnr-alarm"></i> <span>流程定义</span></a></li>
-					<li><a href="javascript:void(0)" onclick="addTab('审计知识库管理','auditlib')"><i class="lnr lnr-alarm"></i> <span>审计知识库管理</span></a></li>
-					<li><a href="javascript:void(0)" onclick="addTab('工作日志','worklog')"><i class="lnr lnr-alarm"></i> <span>工作日志</span></a></li>
+					<li>
+						<a href="#subPages1" data-toggle="collapse" class="collapsed"><i class="lnr lnr-file-empty"></i> <span>立项阶段</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
+						<div id="subPages1" class="collapse ">
+							<ul class="nav">
+								<li><a href="javascript:void(0);" onclick="addTab('项目基本信息','proinfo')" >项目基本信息</a></li>
+								<li><a href="javascript:void(0)" onclick="addTab('角色分配','roleassign')">我的项目</a></li>
+								<!--<li><a href="javascript:void(0)" onclick="addTab('任务分配','taskassign')">任务分配</a></li>-->
+								<!--<li><a href="javascript:void(0)" onclick="addTab('审计方案','auditscheme')">审计方案</a></li>-->
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="#subPages2" data-toggle="collapse" class="collapsed"><i class="lnr lnr-file-empty"></i> <span>非现场检查阶段</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
+						<div id="subPages2" class="collapse ">
+							<ul class="nav">
+								<li><a href="javascript:void(0);" onclick="addTab('数据抽取','dataget')" >数据抽取</a></li>
+								<li><a href="javascript:void(0)" onclick="addTab('疑点库','doublelib')">疑点库</a></li>
+								<li><a href="javascript:void(0)" onclick="addTab('非现场检查结果','result')">非现场检查结果</a></li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="#subPages3" data-toggle="collapse" class="collapsed"><i class="lnr lnr-file-empty"></i> <span>现场检查阶段</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
+						<div id="subPages3" class="collapse ">
+							<ul class="nav">
+								<li><a href="javascript:void(0);" onclick="addTab('进场会','inmeeting')" >进场会</a></li>
+								<li><a href="javascript:void(0)" onclick="addTab('离场会议','outmetting')">离场会议</a></li>
+								<li><a href="javascript:void(0)" onclick="addTab('现场检查结果','insiteresult')">现场检查结果</a></li>
+								<li><a href="javascript:void(0)" onclick="addTab('稽核清单','list')">稽核清单</a></li>
+								<li><a href="javascript:void(0)" onclick="addTab('量化打分','score')">量化打分</a></li>
+								<li><a href="javascript:void(0)" onclick="addTab('风险矩阵','riskmatrix')">风险矩阵</a></li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="#subPages4" data-toggle="collapse" class="collapsed"><i class="lnr lnr-file-empty"></i> <span>结束阶段</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
+						<div id="subPages4" class="collapse ">
+							<ul class="nav">
+								<li><a href="javascript:void(0);" onclick="addTab('整改清单','changelist')" >整改清单</a></li>
+								<li><a href="javascript:void(0)" onclick="addTab('征求意见稿','fordraft')">征求意见稿</a></li>
+								<li><a href="javascript:void(0)" onclick="addTab('生成底稿','manuscript')">生成底稿</a></li>
+								<li><a href="javascript:void(0)" onclick="addTab('正式稿','officialdraft')">正式稿</a></li>
+								<li><a href="javascript:void(0)" onclick="addTab('项目归档','profile')">项目归档</a></li>
+							</ul>
+						</div>
+					</li>
+					<li><a href="javascript:void(0);" onclick="addTab('审计计划管理','auditplanpro')"><i class="lnr lnr-alarm"></i> <span>审计计划管理</span></a></li>
+					<li><a href="javascript:void(0);" onclick="addTab('审计项目','auditpro')"><i class="lnr lnr-alarm"></i> <span>审计项目</span></a></li>
+					<!--<li><a href="javascript:void(0)" onclick="addTab('审计计划管理','riskmatrix')"><i class="lnr lnr-alarm"></i> <span>审计计划管理</span></a></li>-->
+					<!--<li><a href="javascript:void(0)" onclick="addTab('被审单位管理','auditedmanage')"><i class="lnr lnr-text-format"></i> <span>被审单位管理</span></a></li>-->
+					<!--<li><a href="javascript:void(0)" onclick="addTab('审计项目','auditpro')"><i class="lnr lnr-linearicons"></i> <span>审计项目</span></a></li>-->
+					<!--<li><a href="javascript:void(0)" onclick="addTab('流程定义','processdefine')"><i class="lnr lnr-alarm"></i> <span>流程定义</span></a></li>-->
+					<!--<li><a href="javascript:void(0)" onclick="addTab('审计知识库管理','auditlib')"><i class="lnr lnr-alarm"></i> <span>审计知识库管理</span></a></li>-->
+					<!--<li><a href="javascript:void(0)" onclick="addTab('工作日志','worklog')"><i class="lnr lnr-alarm"></i> <span>工作日志</span></a></li>-->
 				</ul>
 			</nav>
 		</div>
