--- a/src/main/resources/templates/todoList.html
+++ b/src/main/resources/templates/todoList.html
@@ -19,14 +19,16 @@
          <div id="tool">
              <a href="javascript:void(0)" class="easyui-linkbutton" style="width: 100px;">处理</a>
          </div>
-            <table class="easyui-datagrid" toolbar="#tool"  data-options="pagination:true,fitColumns:true"  style="width:100%;height:648px;">
+            <table class="easyui-datagrid" toolbar="#tool"  data-options="url:'things',pagination:true,fitColumns:true"  style="1100px;height:648px;">
                 <thead>
                 <tr>
                     <th field="ck" checkbox="true"></th>
-                    <th field="itemid" width="200">待办类型</th>
-                    <th field="productid" width="200">发送人</th>
-                    <th field="listprice" width="200" align="right">发送时间</th>
-                    <th field="unitcost" width="200" align="right">操作</th>
+                    <th field="dType" width="25%">待办类型</th>
+                    <th field="dSendpeople" width="24%">发送人</th>
+                    <th field="dSendtime" width="25%" align="center">发送时间</th>
+                    <th data-options="field:'cz',formatter:function(value,row){
+                return '<a href=\'javascript:void(0)\' onclick=\'redo('+row.id+')\'>删除</a>'
+            }" width="25%" align="center">操作</th>
                 </tr>
                 </thead>
             </table>
