--- a/src/main/resources/templates/workbench/approved.html
+++ b/src/main/resources/templates/workbench/approved.html
@@ -14,27 +14,18 @@
 <body class="easyui-layout">
 <div data-options="region:'center'" style="height: 830px;">
     <div id="plush" ba>
-        <span><a href="javascript:void(0)" class="easyui-linkbutton" plain="true" >刷新</a></span>
+        <span><a href="javascript:void(0)" onclick="$('#dg').datagrid('reload')" class="easyui-linkbutton" plain="true" >刷新</a></span>
     </div>
-    <table class="easyui-datagrid" style="height:711px;">
+    <table id="dg" class="easyui-datagrid" data-options="url:'approveds'" style="height:694px;">
         <thead>
         <tr>
-            <th data-options="field:'matter'" style="width:20%">事项</th>
-            <th data-options="field:'time'" style="width:20%">时间</th>
-            <th data-options="field:'chuliren'" style="width:20%">处理人</th>
-            <th data-options="field:'operation'" style="width:20%">处理操作</th>
-            <th data-options="field:'opinion'" style="width:20%">处理意见</th>
+            <th data-options="field:'dThing'" style="width:20%">事项</th>
+            <th data-options="field:'oTime'" style="width:20%">时间</th>
+            <th data-options="field:'oJieshoudept'" style="width:20%">处理人</th>
+            <th data-options="field:'oCaozuo'" style="width:20%">处理操作</th>
+            <th data-options="field:'oJianyi'" style="width:21%">处理意见</th>
         </tr>
         </thead>
-        <tbody>
-        <tr>
-            <td>项目立项审核</td>
-            <td>2017-03-06 09:10:05</td>
-            <td>启动用户</td>
-            <td>同意</td>
-            <td>无</td>
-        </tr>
-        </tbody>
     </table>
 </div>
 
